<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aquaminder</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="subtitle">Monitor leaks, usage, and savings in one place.</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="min_chars">Minimum 8 characters</string>
    <string name="min_chars_label">Min. 8 characters</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_button">Continue</string>
    <string name="or">or</string>
    <string name="or_continue_with">or continue with</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="google">Google</string>
    <string name="terms_and_privacy">By continuing, you agree to our Terms &amp; Privacy.</string>
</resources>