<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingHorizontal="24dp"
        android:paddingVertical="24dp">


        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/Aquastic"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="16dp"
            android:text="@string/sign_in"
            android:textColor="@color/Aquastic"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="start"
            android:text="@string/welcome"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textSize="14sp"
            android:textColor="#555"
            android:layout_marginBottom="16dp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawablePadding="12dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:padding="16dp"
            android:layout_marginBottom="12dp" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:drawableEnd="@android:drawable/ic_menu_view"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_marginBottom="4dp" />

        <!-- Minimum Characters + Forgot Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/min_chars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_chars"
                android:layout_weight="1"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_weight="1"
                android:textColor="@color/Aquastic"
                android:textSize="12sp" />
        </LinearLayout>


        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/Aquastic"
            android:text="@string/continue_button"
            android:textColor="@android:color/white"

            android:layout_marginBottom="12dp" />

        <!-- OR Text -->
        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"
            android:gravity="center" />

        <!-- Google Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            app:backgroundTint="#F0F8FF"
            app:cornerRadius="24dp"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconTint="@null"
            android:layout_marginBottom="16dp" />


        <TextView
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/terms_and_privacy"
            android:textSize="12sp"
            android:textColor="#444"
            android:gravity="center"
            android:layout_marginBottom="8dp" />

    </LinearLayout>
</ScrollView>
